--- a/Rdkit_cheminformatics_assignment.ipynb
+++ b/Rdkit_cheminformatics_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTzpGPcjbU1N2dUhH3HYmy",
+      "authorship_tag": "ABX9TyMqD1uVZbocePLRKVMjw+PD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,7 +80,7 @@
         "id": "F0f-Tu2qHyBf",
         "outputId": "437214bb-4a8a-41b9-b9ae-ee5dd91f8c9f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "q2aVQ6jkIAk3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
         "id": "Ff-DRIbeINuX",
         "outputId": "7c570388-30a2-410f-a454-92476af22768"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +499,7 @@
         "id": "meNtvqr4IMp7",
         "outputId": "92c2051c-256f-4275-d7bf-67de524f763c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
         "id": "aaOUHOHLIkkY",
         "outputId": "9ce66e30-bd19-4312-aa29-984ae03e8efa"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,13 +904,12 @@
       "metadata": {
         "id": "vUKLx0dEItwC"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# define a text buffer for our examples\n",
         "examples = \"\"\"C(C)(C)O isopropanol\n",
         "C(Cl)(Cl)(Cl)Cl carbon tetrachloride\n",
         "CC(=O)O acetic acid\"\"\"\n",
@@ -920,7 +919,7 @@
       "metadata": {
         "id": "bXri2x0FJFEn"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +930,7 @@
       "metadata": {
         "id": "j2E01S5IJLx6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -946,7 +945,7 @@
         "id": "VLK3pLypJafo",
         "outputId": "7345d59c-3922-4c54-a580-492cb9c032fb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +981,7 @@
       "metadata": {
         "id": "z1FWGkBKJHXg"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -998,7 +997,7 @@
         "id": "ziZZ_xysJJjY",
         "outputId": "963ae9ed-ce66-4740-80e3-58b992cb991e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,23 +1022,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "The most straightforward and consistent way to get fingerprints is to create a FingeprintGenerator object for your fingerprint type of interest and then use that to calculate fingerprints. Fingerprint generators provide a consistent interface to all the supported fingerprinting methods and allow easy generation of fingerprints as:\n",
-        "\n",
-        "    bit vectors : fpgen.GetFingerprint\n",
-        "\n",
-        "    sparse (unfolded) bit vectors : fpgen.GetSparseFingerprint\n",
-        "\n",
-        "    count vectors : fpgen.GetCountFingerprint\n",
-        "\n",
-        "    sparse (unfolded) count vectors : fpgen.GetSparseCountFingerprint\n"
-      ],
-      "metadata": {
-        "id": "vYY9_6L5Kn9k"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "df_maccs = []\n",
@@ -1054,7 +1036,7 @@
       "metadata": {
         "id": "HnJHP43wJ1ju"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1070,7 +1052,7 @@
         "id": "s2EGN0YvKCQt",
         "outputId": "58872fa5-d1e1-45fc-fcae-47cb5a1ab663"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1482,15 +1464,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "##RDKit (Topological) Fingerprints"
-      ],
-      "metadata": {
-        "id": "nT7kZjpHLcLv"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "from rdkit import DataStructs"
@@ -1526,7 +1499,7 @@
       "metadata": {
         "id": "wqeE4WRKLys8"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1542,7 +1515,7 @@
         "id": "ZYqaN3f_L3r_",
         "outputId": "1222dd6b-1fe9-4ba8-f7cd-2ebaf083bab9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1978,7 +1951,7 @@
         "id": "e8Dh5LTdMBmR",
         "outputId": "7bdfdf0e-22dd-44eb-e2c7-25724ebfb7a6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2104,7 +2077,7 @@
         "id": "9ordvPyrNS_3",
         "outputId": "20542bec-e83c-422a-9572-251dc37f750a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2333,7 +2306,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Atom Pair Fingerprint\n"
+        "##Atom Pair Fingerprint\n"
       ],
       "metadata": {
         "id": "Ni4DnjxuXBhr"
@@ -2356,20 +2329,10 @@
         "  arr = np.array(apf_bitvector)\n",
         "  df_apf.append(arr)\n",
         "\n",
-        "APF = pd.concat([df, pd.DataFrame(df_apf)], axis=1)\n",
-        ""
+        "APF = pd.concat([df, pd.DataFrame(df_apf)], axis=1)\n"
       ],
       "metadata": {
         "id": "qj6-AvntMb5g"
-      },
-      "execution_count": 38,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ilw-PxpSYctJ"
       },
       "execution_count": null,
       "outputs": []
@@ -2378,7 +2341,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Topological Torsion Fingerprint\n"
+        "##Topological Torsion Fingerprint\n"
       ],
       "metadata": {
         "id": "2wxF7xCIXDAJ"
@@ -2396,13 +2359,12 @@
         "  arr = np.array(ttf_bitvector)\n",
         "  df_ttf.append(arr)\n",
         "\n",
-        "TTF = pd.concat([df, pd.DataFrame(df_ttf)], axis=1)\n",
-        ""
+        "TTF = pd.concat([df, pd.DataFrame(df_ttf)], axis=1)\n"
       ],
       "metadata": {
         "id": "FHLteJCEXDix"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2418,7 +2380,7 @@
         "id": "ff6LIArHXHmx",
         "outputId": "dc8c48f0-87cb-40c3-bd9d-f7dfeda6e33d"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2838,33 +2800,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Kl0ffNvpYdSh"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "O_0faIKSZicR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fg5VDvIqZifp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "display(MF.iloc[2,1])\n",
         "display(MF.iloc[7,1])"
@@ -2877,7 +2812,7 @@
         "id": "buZlnFqYZitA",
         "outputId": "366dd7e7-409d-4a51-e968-67175f6c2ee0"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3063,7 +2998,7 @@
         "id": "83jDw8ZXb0M6",
         "outputId": "285d0979-1a0f-49ac-fcef-5c259e620bb6"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3087,7 +3022,7 @@
       "metadata": {
         "id": "ZUs5Y_SmYdWU"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3099,7 +3034,7 @@
       "metadata": {
         "id": "hs-gzHnfY7Lz"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3114,7 +3049,7 @@
         "id": "mfGccIZTY-AQ",
         "outputId": "99db321d-734c-4894-9f81-3c5b15c1c284"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3141,7 +3076,7 @@
         "id": "XptI3cZjZCw4",
         "outputId": "fd860ca7-ff3b-47e8-a2b0-dc47711dea0f"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3181,7 +3116,7 @@
         "id": "FCASblPLZuVq",
         "outputId": "f609ea88-dac4-4447-e7f0-7eefcc07a1f4"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3228,7 +3163,7 @@
         "id": "SNrmhV0zalYZ",
         "outputId": "e85eedb4-5c62-4f9d-c789-938778958846"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3255,7 +3190,7 @@
         "id": "KblNwXj0a1ME",
         "outputId": "a8350f17-dbd6-49c6-8823-d89868732bbf"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3286,7 +3221,7 @@
         "id": "Yd4f8a8Za2sB",
         "outputId": "cea8bc32-604a-4b6c-d9f3-09ac945b12fe"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3312,7 +3247,7 @@
         "id": "H1-I2rNta_tL",
         "outputId": "59f2f863-3f20-44ba-afd7-46800eaa2dc8"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3338,7 +3273,7 @@
         "id": "nD0ZQQM9bEWA",
         "outputId": "95c071af-e3ef-4d9f-9b4a-73f5f7672faa"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3364,7 +3299,7 @@
         "id": "aSK1n_o7bGjp",
         "outputId": "24af3c5a-3331-41a6-c110-033a9dcdddcf"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3404,7 +3339,7 @@
         "id": "y5tx09-vbPva",
         "outputId": "7c4d49cd-fa05-4bea-c768-f91567ac9084"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3425,7 +3360,7 @@
       "metadata": {
         "id": "B123fng0bXuA"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3440,7 +3375,7 @@
         "id": "PVs-vPEzbZSo",
         "outputId": "728f0b65-d159-4cd2-a67b-8488a2f8d640"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3471,7 +3406,7 @@
       "metadata": {
         "id": "T19a4yrEbof2"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3487,7 +3422,7 @@
         "id": "EkYSIqEMbyCq",
         "outputId": "3c5da6b0-f595-400e-89b4-27d5e1142a6e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3516,7 +3451,7 @@
         "id": "z2L6R_PTbjJh",
         "outputId": "5beb2148-da3c-4e6f-a885-37edfe32cd79"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3555,7 +3490,7 @@
         "id": "-XApBrYucROr",
         "outputId": "80892c1b-d143-4f18-a386-785f0a263990"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3586,7 +3521,7 @@
       "metadata": {
         "id": "0TPvHA1qfWN6"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3604,7 +3539,7 @@
         "id": "8ZwnjezufrYg",
         "outputId": "a1c6c2c7-ab7d-40b9-c7b4-6401ef6e6c96"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3750,7 +3685,7 @@
       "metadata": {
         "id": "MaSNZFrUfxsa"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3768,7 +3703,7 @@
         "id": "BP9RsLc4f1CS",
         "outputId": "3770d64f-17fc-45bc-813d-da66fe6664c3"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
